<resources>
    <string name="app_name">market-w</string>
    <string name="shop">Shop</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_fruta_fresta">Frutas &amp; Vegetais</string>
    <string name="titulo_oleo_azeite">Oleo Cozinha &amp; Azeites</string>
    <string name="titulo_carne_peixes">Carnes     &amp; Peixes</string>
    <string name="titulo_padaria_laches">Padaria &amp; Lanches</string>
    <string name="titulo_laticinios">Laticínios &amp; Ovos  </string>
    <string name="titulo_bebidas">Bebidas  </string>
</resources>